test/tests/functions/string/replace_all_invalid_static_patterns.txt
error: expected argument of type `list<string>`, but found element of type `int64`
 --> tests/functions/string/replace_all_invalid_static_patterns.tql:9:23
  |
9 | raw = raw.replace_all([80], "x")
  |                       ^^^^ 
  |
